Fix css dashboard widget multi-cols alignment

--- a/deb/openmediavault/var/www/openmediavault/css/theme-all-rtl.scss
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-all-rtl.scss
@@ -68,7 +68,18 @@ div#headerrlogo {
 	direction: rtl;
 }
 /******************************************************************************/
-/* Misc */
-.x-rtl > .x-column {
-    float: left !important;
+/* Fix dashboard widgets multi-cols alighment */
+.x-dashboard-column-first {
+	padding-right: 7px;
+	padding-left: 0px;
+}
+.x-dashboard-column-last {
+	padding-left: 7px;
+}
+div[class~="x-dashboard-column-first"][class~="x-dashboard-column-last"]{
+	padding-left: 0px;
+	padding-right: 7px;
+}
+.x-dashboard-panel {
+    margin-top: 10px;
 }
